Fixed action title not showing completely in ActionsPage

--- a/src/modules/dashboard/components/ActionsPage/ActionsPage.css
+++ b/src/modules/dashboard/components/ActionsPage/ActionsPage.css
@@ -48,9 +48,7 @@
 }
 
 .heading {
-  composes: inlineEllipsis from '~styles/text.css';
   margin-bottom: 20px;
-  max-width: 250px;
   font-size: var(--size-medium-l);
   font-weight: var(--weight-bold);
   line-height: 24px;
